--- a/1D mini proj/Full_Adder/work/vivado/Full_Adder/Full_Adder.runs/impl_1/usage_statistics_webtalk.html
+++ b/1D mini proj/Full_Adder/work/vivado/Full_Adder/Full_Adder.runs/impl_1/usage_statistics_webtalk.html
@@ -4,10 +4,10 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>2902540</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Thu Oct  8 04:56:58 2020</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Oct  9 20:26:32 2020</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2020.1 (64-bit)</TD>
-  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>bfa2531d15a24032ad55333d53bc8ad6</TD>
+  <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>1155b4a2cfd04c04908bb8e9a7507843</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>c70bfbf116b157ed9a7b1e60d7e81ab6</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>c70bfbf116b157ed9a7b1e60d7e81ab6</TD>
@@ -57,7 +57,7 @@
    <TD>launch_simulation_vcs=0</TD>
 </TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=0</TD>
    <TD>simulator_language=Mixed</TD>
-   <TD>srcsetcount=3</TD>
+   <TD>srcsetcount=5</TD>
    <TD>synthesisstrategy=Vivado Synthesis Defaults</TD>
 </TR><TR ALIGN='LEFT'>   <TD>target_language=Verilog</TD>
    <TD>target_simulator=XSim</TD>
@@ -70,19 +70,37 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>gnd=1</TD>
-    <TD>ibuf=6</TD>
+<TR ALIGN='LEFT'>    <TD>bufg=1</TD>
+    <TD>carry4=7</TD>
+    <TD>fdre=30</TD>
+    <TD>fdse=4</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=5</TD>
+    <TD>ibuf=7</TD>
+    <TD>lut1=2</TD>
+    <TD>lut3=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=4</TD>
+    <TD>lut5=2</TD>
+    <TD>lut6=1</TD>
     <TD>obuf=48</TD>
-    <TD>vcc=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcc=5</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>gnd=1</TD>
-    <TD>ibuf=6</TD>
+<TR ALIGN='LEFT'>    <TD>bufg=1</TD>
+    <TD>carry4=7</TD>
+    <TD>fdre=30</TD>
+    <TD>fdse=4</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=5</TD>
+    <TD>ibuf=7</TD>
+    <TD>lut1=2</TD>
+    <TD>lut3=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut4=4</TD>
+    <TD>lut5=2</TD>
+    <TD>lut6=1</TD>
     <TD>obuf=48</TD>
-    <TD>vcc=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcc=5</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -162,6 +180,13 @@
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
+    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>results</B></TD></TR>
+<TR ALIGN='LEFT'>    <TD>timing-17=3</TD>
+    <TD>timing-18=1</TD>
+</TR>   </TABLE>
+   </TD></TR>
+   <TR><TD>
+   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>nstd-1=Warning</TD>
     <TD>ucio-1=Warning</TD>
@@ -198,29 +223,29 @@
     <TD>bidir_output_enable=1.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>board_layers=12to15 (12 to 15 Layers)</TD>
     <TD>board_selection=medium (10&quot;x10&quot;)</TD>
-    <TD>clocks=0.000000</TD>
-    <TD>confidence_level_clock_activity=High</TD>
+    <TD>clocks=0.000582</TD>
+    <TD>confidence_level_clock_activity=Medium</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_design_state=High</TD>
     <TD>confidence_level_device_models=High</TD>
-    <TD>confidence_level_internal_activity=High</TD>
+    <TD>confidence_level_internal_activity=Medium</TD>
     <TD>confidence_level_io_activity=Low</TD>
 </TR><TR ALIGN='LEFT'>    <TD>confidence_level_overall=Low</TD>
     <TD>customer=TBD</TD>
     <TD>customer_class=TBD</TD>
-    <TD>devstatic=0.071708</TD>
+    <TD>devstatic=0.071714</TD>
 </TR><TR ALIGN='LEFT'>    <TD>die=xc7a35tftg256-1</TD>
     <TD>dsp_output_toggle=12.500000</TD>
-    <TD>dynamic=0.004474</TD>
+    <TD>dynamic=0.007550</TD>
     <TD>effective_thetaja=4.85</TD>
 </TR><TR ALIGN='LEFT'>    <TD>enable_probability=0.990000</TD>
     <TD>family=artix7</TD>
     <TD>ff_toggle=12.500000</TD>
     <TD>flow_state=routed</TD>
 </TR><TR ALIGN='LEFT'>    <TD>heatsink=medium (Medium Profile)</TD>
-    <TD>i/o=0.004396</TD>
+    <TD>i/o=0.006729</TD>
     <TD>input_toggle=12.500000</TD>
     <TD>junction_temp=25.4 (C)</TD>
-</TR><TR ALIGN='LEFT'>    <TD>logic=0.000000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>logic=0.000058</TD>
     <TD>mgtavcc_dynamic_current=0.000000</TD>
     <TD>mgtavcc_static_current=0.000000</TD>
     <TD>mgtavcc_total_current=0.000000</TD>
@@ -231,13 +256,13 @@
 </TR><TR ALIGN='LEFT'>    <TD>mgtavtt_voltage=1.200000</TD>
     <TD>netlist_net_matched=NA</TD>
     <TD>off-chip_power=0.000000</TD>
-    <TD>on-chip_power=0.076182</TD>
+    <TD>on-chip_power=0.079264</TD>
 </TR><TR ALIGN='LEFT'>    <TD>output_enable=1.000000</TD>
     <TD>output_load=5.000000</TD>
     <TD>output_toggle=12.500000</TD>
     <TD>package=ftg256</TD>
-</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=0.000000</TD>
-    <TD>pct_inputs_defined=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>pct_clock_constrained=1.000000</TD>
+    <TD>pct_inputs_defined=14</TD>
     <TD>platform=nt64</TD>
     <TD>process=typical</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ram_enable=50.000000</TD>
@@ -245,7 +270,7 @@
     <TD>read_saif=False</TD>
     <TD>set/reset_probability=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>signal_rate=False</TD>
-    <TD>signals=0.000078</TD>
+    <TD>signals=0.000181</TD>
     <TD>simulation_file=None</TD>
     <TD>speedgrade=-1</TD>
 </TR><TR ALIGN='LEFT'>    <TD>static_prob=False</TD>
@@ -262,21 +287,21 @@
     <TD>vccadc_static_current=0.020000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccadc_total_current=0.020000</TD>
     <TD>vccadc_voltage=1.800000</TD>
-    <TD>vccaux_dynamic_current=0.000160</TD>
+    <TD>vccaux_dynamic_current=0.000244</TD>
     <TD>vccaux_io_dynamic_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vccaux_io_static_current=0.000000</TD>
     <TD>vccaux_io_total_current=0.000000</TD>
     <TD>vccaux_io_voltage=1.800000</TD>
-    <TD>vccaux_static_current=0.012615</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012775</TD>
+    <TD>vccaux_static_current=0.012616</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccaux_total_current=0.012859</TD>
     <TD>vccaux_voltage=1.800000</TD>
     <TD>vccbram_dynamic_current=0.000000</TD>
-    <TD>vccbram_static_current=0.000161</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000161</TD>
+    <TD>vccbram_static_current=0.000162</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccbram_total_current=0.000162</TD>
     <TD>vccbram_voltage=1.000000</TD>
-    <TD>vccint_dynamic_current=0.000102</TD>
-    <TD>vccint_static_current=0.009540</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.009641</TD>
+    <TD>vccint_dynamic_current=0.000905</TD>
+    <TD>vccint_static_current=0.009545</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vccint_total_current=0.010450</TD>
     <TD>vccint_voltage=1.000000</TD>
     <TD>vcco12_dynamic_current=0.000000</TD>
     <TD>vcco12_static_current=0.000000</TD>
@@ -298,9 +323,9 @@
     <TD>vcco25_static_current=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>vcco25_total_current=0.000000</TD>
     <TD>vcco25_voltage=2.500000</TD>
-    <TD>vcco33_dynamic_current=0.001238</TD>
+    <TD>vcco33_dynamic_current=0.001881</TD>
     <TD>vcco33_static_current=0.001000</TD>
-</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.002238</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcco33_total_current=0.002881</TD>
     <TD>vcco33_voltage=3.300000</TD>
     <TD>version=2020.1</TD>
 </TR>   </TABLE>
@@ -313,8 +338,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>clocking</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufgctrl_available=32</TD>
     <TD>bufgctrl_fixed=0</TD>
-    <TD>bufgctrl_used=0</TD>
-    <TD>bufgctrl_util_percentage=0.00</TD>
+    <TD>bufgctrl_used=1</TD>
+    <TD>bufgctrl_util_percentage=3.13</TD>
 </TR><TR ALIGN='LEFT'>    <TD>bufhce_available=72</TD>
     <TD>bufhce_fixed=0</TD>
     <TD>bufhce_used=0</TD>
@@ -412,9 +437,27 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>primitives</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
-    <TD>ibuf_used=6</TD>
-    <TD>obuf_functional_category=IO</TD>
+<TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
+    <TD>bufg_used=1</TD>
+    <TD>carry4_functional_category=CarryLogic</TD>
+    <TD>carry4_used=7</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fdre_functional_category=Flop &amp; Latch</TD>
+    <TD>fdre_used=30</TD>
+    <TD>fdse_functional_category=Flop &amp; Latch</TD>
+    <TD>fdse_used=4</TD>
+</TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
+    <TD>ibuf_used=7</TD>
+    <TD>lut1_functional_category=LUT</TD>
+    <TD>lut1_used=2</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
+    <TD>lut3_used=1</TD>
+    <TD>lut4_functional_category=LUT</TD>
+    <TD>lut4_used=4</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
+    <TD>lut5_used=2</TD>
+    <TD>lut6_functional_category=LUT</TD>
+    <TD>lut6_used=1</TD>
+</TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=48</TD>
 </TR>   </TABLE>
    </TD></TR>
@@ -431,60 +474,70 @@
     <TD>f8_muxes_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=0</TD>
-    <TD>lut_as_logic_util_percentage=0.00</TD>
+    <TD>lut_as_logic_used=7</TD>
+    <TD>lut_as_logic_util_percentage=0.03</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
     <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=41600</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=0</TD>
-    <TD>register_as_flip_flop_util_percentage=0.00</TD>
+    <TD>register_as_flip_flop_used=34</TD>
+    <TD>register_as_flip_flop_util_percentage=0.08</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=41600</TD>
     <TD>register_as_latch_fixed=0</TD>
     <TD>register_as_latch_used=0</TD>
     <TD>register_as_latch_util_percentage=0.00</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=20800</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=0</TD>
-    <TD>slice_luts_util_percentage=0.00</TD>
+    <TD>slice_luts_used=7</TD>
+    <TD>slice_luts_util_percentage=0.03</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=0</TD>
-    <TD>slice_registers_util_percentage=0.00</TD>
+    <TD>slice_registers_used=34</TD>
+    <TD>slice_registers_util_percentage=0.08</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
     <TD>lut_as_distributed_ram_used=0</TD>
     <TD>lut_as_logic_available=20800</TD>
     <TD>lut_as_logic_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=0</TD>
-    <TD>lut_as_logic_util_percentage=0.00</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=7</TD>
+    <TD>lut_as_logic_util_percentage=0.03</TD>
     <TD>lut_as_memory_available=9600</TD>
     <TD>lut_as_memory_fixed=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=0</TD>
     <TD>lut_as_memory_util_percentage=0.00</TD>
     <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=0</TD>
-    <TD>register_driven_from_outside_the_slice_used=0</TD>
-    <TD>register_driven_from_within_the_slice_fixed=0</TD>
-    <TD>register_driven_from_within_the_slice_used=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_in_front_of_the_register_is_unused_fixed=0</TD>
+    <TD>lut_in_front_of_the_register_is_unused_used=3</TD>
+    <TD>lut_in_front_of_the_register_is_used_fixed=3</TD>
+    <TD>lut_in_front_of_the_register_is_used_used=2</TD>
+</TR><TR ALIGN='LEFT'>    <TD>register_driven_from_outside_the_slice_fixed=2</TD>
+    <TD>register_driven_from_outside_the_slice_used=5</TD>
+    <TD>register_driven_from_within_the_slice_fixed=5</TD>
+    <TD>register_driven_from_within_the_slice_used=29</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_available=8150</TD>
     <TD>slice_fixed=0</TD>
     <TD>slice_registers_available=41600</TD>
     <TD>slice_registers_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=0</TD>
-    <TD>slice_registers_util_percentage=0.00</TD>
-    <TD>slice_used=0</TD>
-    <TD>slice_util_percentage=0.00</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_registers_used=34</TD>
+    <TD>slice_registers_util_percentage=0.08</TD>
+    <TD>slice_used=12</TD>
+    <TD>slice_util_percentage=0.15</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=0</TD>
+    <TD>slicel_used=5</TD>
     <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=0</TD>
+    <TD>slicem_used=7</TD>
 </TR><TR ALIGN='LEFT'>    <TD>unique_control_sets_available=8150</TD>
     <TD>unique_control_sets_fixed=8150</TD>
-    <TD>unique_control_sets_used=0</TD>
-    <TD>unique_control_sets_util_percentage=0.00</TD>
+    <TD>unique_control_sets_used=4</TD>
+    <TD>unique_control_sets_util_percentage=0.05</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_fixed=0.05</TD>
+    <TD>using_o5_and_o6_used=3</TD>
+    <TD>using_o5_output_only_fixed=3</TD>
+    <TD>using_o5_output_only_used=0</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_fixed=0</TD>
+    <TD>using_o6_output_only_used=4</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -574,10 +627,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:37s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:33s</TD>
     <TD>hls_ip=0</TD>
     <TD>memory_gain=0.000MB</TD>
-    <TD>memory_peak=1014.766MB</TD>
+    <TD>memory_peak=1014.117MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
